# launchpad

./: .cursorignore  .gitignore  README.md  build.py  config.json  deliverables_generation.md  install-desktop.sh  launchpad.spec  package.bat  package.py  package.sh  refactor.md  todo
.cursor/rules/: refrain-from-technical-ui-text.mdc
.github/ignore/: release-notes-gist.yml
.github/workflows/: extension-ci.yml  main-release.yml
A3LaunchPad/mod/addons/: a3_launchpad_ext_core.pbo
a3hook/: s3hook.cpp
docs/: INSTALLATION.md
extension/: .dockerignore  CMakeLists.txt  CMakePresets.json  README.md  a3-launchpad-ext.cpp
extension/.devcontainer/: README.md  devcontainer.json
extension/classes/: ArmaParser.h  IpcClient.h  Logging.cpp  Logging.h  Util.cpp
extension/scripts/: invoker.py
launchpad/: __main__.py  api.py  constants.py  github_integration.py  mission_gen.py  sock_server.py  utils.py
launchpad_client/: package-lock.json  vite.config.ts
launchpad_client/app/: config.json  forge.config.js  package-lock.json  package.json  vite.renderer.config.mjs
launchpad_client/app/src/: main.js  menu.json
launchpad_client/app/src/drivers/: p3d.test.ts  p3dMesh.ts  p3dOdolMesh.ts
launchpad_client/renderer/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
launchpad_client/renderer/src/: App.css  App.tsx  Util.ts  electronIpc.ts  globals.css  index.css  missionMonacoSetup.ts
launchpad_client/renderer/src/api/: launchpad.ts
launchpad_client/renderer/src/components/: AppPreferencesDialog.tsx  ArmaProcessMonitor.tsx  MissionGitHubModal.tsx  MissionResourceBrowser.tsx  P3dPreview.tsx  Sidebar.tsx
launchpad_client/renderer/src/context/: AppPreferencesContext.tsx
launchpad_client/renderer/src/pages/: Debugging.tsx  HomePage.tsx  Logging.tsx  MissionList.tsx  ModProjects.tsx  SettingsPage.tsx
launchpad_client/scripts/: run-launchpad-backend.mjs
launchpad_client/src/: App.css  Util.ts  missionMonacoSetup.ts
launchpad_client/src/api/: launchpad.ts
launchpad_client/src/components/: MissionEditModal.tsx  Sidebar.tsx
launchpad_client/src/components/CustomIcons/: VSCodeIcon.tsx
launchpad_client/src/pages/: MissionBuildPage.tsx  MissionList.tsx  SettingsPage.tsx  Testing.tsx
launchpad_mod/.hemtt/: project.toml
launchpad_mod/.hemttout/: ci_annotations.txt  last_build.hsb
launchpad_mod/addons/a3_launchpad_ext_core/: $PBOPREFIX$  config.cpp
launchpad_mod/addons/a3_launchpad_ext_core/functions/: fn_asyncCall.sqf  fn_genId.sqf  (+1 more)
launchpad_mod/extension/: CMakeLists.txt  README.md  a3-launchpad-ext.cpp
launchpad_mod/extension/classes/: ArmaParser.cpp  IpcClient.cpp
launchpad_mod/extension/scripts/: build.py  healthcheck.py  smoke_extension.py
launchpad_server/: __main__.py  api.py  mission_gen.py
mod/.hemtt/: project.toml
mod/pbos/a3_launchpad_ext_core/: config.cpp
(+15 files in other folders)
